--- a/index.html
+++ b/index.html
@@ -33,5 +33,114 @@
             </div>
         </div>
     </header>
+    <main>
+        <hr>
+        <section class="companies">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </section>
+        <hr>
+        <section class="popular-collection">
+            <h3 class="popular-collection-title">Popular Collection</h3>
+            <div class="collection-card">
+                <div class="card">
+                    <img src="images/tripod.png" alt="">
+                    <h2 class="card-title">Flex Tripod</h2>
+                    <h3 class="card-price">$50.48</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/mic.png" alt="">
+                    <h2 class="card-title">microphone</h2>
+                    <h3 class="card-price">$120.25</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/airpod.png" alt="">
+                    <h2 class="card-title">Airbuds</h2>
+                    <h3 class="card-price">$100.00</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/drone.png" alt="">
+                    <h2 class="card-title">Drone</h2>
+                    <h3 class="card-price">$980.25</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/lights.png" alt="">
+                    <h2 class="card-title">Light Setup</h2>
+                    <h3 class="card-price">$1200.00</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/setup.png" alt="">
+                    <h2 class="card-title">Photoshoot set</h2>
+                    <h3 class="card-price">$820.40</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/camera.png" alt="">
+                    <h2 class="card-title">Vlogging Camera</h2>
+                    <h3 class="card-price">$1800.80</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/single-light.png" alt="">
+                    <h2 class="card-title">Green Screen</h2>
+                    <h3 class="card-price">$25.48</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/action.png" alt="">
+                    <h2 class="card-title">Action Camera</h2>
+                    <h3 class="card-price">$380.00</h3>
+                    <div class="card-ratings">
+                        <img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill.svg" alt=""><img src="Star_fill_gray.svg" alt=""> <h3 class="rating-text">4.99</h3>
+                    </div>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <p class="see-more">see more <i class="fa-solid fa-arrow-right-arrow-left"></i></p>
+        </section>
+    </main>
 </body>
 </html>
