Complete with responsive

--- a/index.html
+++ b/index.html
@@ -141,6 +141,24 @@
             </div>
             <p class="see-more">see more <i class="fa-solid fa-arrow-right-arrow-left"></i></p>
         </section>
+        <section class="featured-product">
+            <img src="images/gear.png" alt="">
+            <div class="featured-content">
+                <h2 class="featured-title">Featured products at one place</h2>
+                <p class="featured-description">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <button class="join-now">Join Now <i class="fa-solid fa-arrow-right-arrow-left"></i></button>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <h2 class="footer-title">Influencer products</h2>
+        <p class="footer-description">Copyright © 2020  influencer products</p>
+        <p class="footer-description">All rights reserved</p>
+        <div class="icons">
+            <img src="facebook.png" alt=""><img src="insta.png" alt=""><img src="twitter.png" alt=""><img src="" alt="">
+        </div>
+    </footer>
 </body>
 </html>
